// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PostPreview default 1`] = `
<div>
  <a
    class="v-card v-card--hover theme--light"
    href="https://busy.org/kr/@aaron2020jeju/3datge-kr-gazua"
    target="blank"
  >
    <div
      class="v-card__title"
    >
      <div>
        <h3
          class="mb-0"
        >
          The Menzoberranzan Bank of Neoxian: daily contracts: 2018-08-30
        </h3>
         
        <div
          class="author"
        >
          neoxian  
          <span>
            68
          </span>
        </div>
      </div>
    </div>
     
    <div
      class="v-responsive v-image"
    >
      <div
        class="v-responsive__sizer"
        style="padding-bottom: 25%;"
      />
      <div
        class="v-image__image v-image__image--preload v-image__image--cover"
        style="background-position: center center;"
      />
      <div
        class="v-responsive__content"
      />
    </div>
     
    <div
      class="v-card__title"
    >
      <div>
        <div>
          The Bank of Neoxian shall loan the sum of 120 steem to @owner99. He promises to repay 135 steem. He shall p...
        </div>
         
        <div
          class="stats"
        >
          <button
            class="up-vote v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                keyboard_arrow_up
              </i>
            </div>
          </button>
           19 
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                comment
              </i>
            </div>
          </button>
          19 
          <span
            class="payout"
          >
            $12.17
          </span>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Storyshots PostPreview voted 1`] = `
<div>
  <a
    class="v-card v-card--hover theme--light"
    href="https://busy.org/kr/@aaron2020jeju/3datge-kr-gazua"
    target="blank"
  >
    <div
      class="v-card__title"
    >
      <div>
        <h3
          class="mb-0"
        >
          The Menzoberranzan Bank of Neoxian: daily contracts: 2018-08-30
        </h3>
         
        <div
          class="author"
        >
          neoxian  
          <span>
            68
          </span>
        </div>
      </div>
    </div>
     
    <div
      class="v-responsive v-image"
    >
      <div
        class="v-responsive__sizer"
        style="padding-bottom: 25%;"
      />
      <div
        class="v-image__image v-image__image--preload v-image__image--cover"
        style="background-position: center center;"
      />
      <div
        class="v-responsive__content"
      />
    </div>
     
    <div
      class="v-card__title"
    >
      <div>
        <div>
          The Bank of Neoxian shall loan the sum of 120 steem to @owner99. He promises to repay 135 steem. He shall p...
        </div>
         
        <div
          class="stats"
        >
          <button
            class="up-vote v-btn v-btn--icon theme--light voted"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                keyboard_arrow_up
              </i>
            </div>
          </button>
           19 
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                comment
              </i>
            </div>
          </button>
          19 
          <span
            class="payout"
          >
            $12.17
          </span>
        </div>
      </div>
    </div>
  </a>
</div>
`;
